hphp/test/slow/parser/hh-reserved-name-float-2.php.expectf
Fatal error: Cannot use 'HH\Float' as class name as it is reserved in %s on line 4
